# SigmaForage

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: sample_sigma_rule.yml
scripts/: fetch_sigma_rules.py  validate_siem_outputs.py
sigma-rules/: README.md
sigmaforge/: __init__.py  cli.py  converter.py  siem_backends.py
tests/: __init__.py  test_cli.py  test_converter.py  test_integration.py  test_siem_backends.py
